# pybye

./: BreakoutStrategy.html  BreakoutStrategyV2.html  Makefile  README.md  config.py  mrtfs_optimizer.csv  pyproject.toml
.github/lint/: .flake8  pyproject.toml
.github/workflows/: lint.yaml
configs/bybit/: market.json
configs/mexc/: market.json
core/bots/bybit/: bot_bs_v1.py  bot_bsv1.py  fliq.py
core/bots/mexc/: fliq.py
core/configs/bybit/: market.json
core/main/bybit/: import_asset_info.py  import_bs_kline.py  import_kline.py  import_symbol_info.py  scan_symbol.py
core/main/mexc/: fsnipe.py  import_fob.py  import_kline.py  import_ticker_24h.py  import_trades.py
core/scripts/bybit/: api.py  import_symbol_info.py  manager.py  utils.py
core/scripts/mexc/: api.py  manager.py
core/scripts/tools/: dtt.py  files.py  logger.py  metrics.py  packers.py  signals.py
data/birdeye/traders/: TOP100_SOL_traders.csv
data/bybit/breakout/: breakouts.csv
data/bybit/info/: bybit_symbol_info_None_spot.csv
data/bybit/kline/: bybit_kline_BTCUSDT_spot_60.csv  bybit_kline_BTCUSDT_spot_D.csv  bybit_kline_INJUSDT_spot_60.csv  bybit_kline_INJUSDT_spot_D.csv  bybit_kline_WIFUSDT_spot_15.csv  bybit_kline_WIFUSDT_spot_5.csv  bybit_kline_WIFUSDT_spot_60.csv  bybit_kline_WIFUSDT_spot_D.csv
data/bybit/scan/: spot_15_scan.csv
data/mexc/24h/: mexc_ticker24h_WIFUSDT.csv
data/mexc/kline/: mexc_kline_WIF_USDT_futures_Day1.csv
docs/: ansi.md  bs-gpto1.md  bs-notes.md
dwh/bybit/kline/: bybit_kline_BTCUSDT_spot_60_2024-09-01T00-00-00_2024-09-14T00-00-00.csv  bybit_kline_BTCUSDT_spot_D_2024-09-01T00-00-00_2024-09-14T00-00-00.csv
tests/bybit/: breakout.py  bs.py  bsv1.py  bsv2.py  bybit_bs_backtest.py  bybit_export.ipynb  export_klines.ipynb  fbrsv1.py  mfbsv1.py  smasv1.py  ssv1.py  vbsv1.py
tests/mexc/: bbma.py  emat.py  geb.py  mrtfs.py
tests/strategy/: breakout.py  scalp.py  trend.py
tests/tools/: backtest.py  breakout.py  logger.py  optimizer.py  srl.ipynb
