[tool.poetry]
name = "pybye"
version = "0.1.0"
description = "Crypto Trading Bot"
authors = ["Slava Golyshevskii <sgolyshevskii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pandas = "^2.2.2"
numpy = "^2.1.1"
pybit = "^5.8.0"
python-dotenv = "^1.0.1"
backtesting = "^0.3.3"
bokeh = "3.1.0"
scikit-optimize = "^0.10.2"
seaborn = "^0.13.2"
pandas-ta = "^0.3.14b0"

[tool.black]
line-length = 110
target-version = ['py39']
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  '''
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
